; This dune file segment configures the build process for the project, 
; focusing on web bundling.

; This stanza excludes the 'node_modules' directory from being 
; considered by dune, which is a standard practice to prevent Dune from scanning 
; dependency files.

(dirs :standard \ node_modules)


; (melange.emit
;  (target output)
;  (alias sexpression_test)
;  (libraries s_tier)
;  (module_systems
;   (es6 mjs)))
