; This dune file segment configures the build process for the project, 
; focusing on web bundling.

; This stanza excludes the 'node_modules' directory from being 
; considered by dune, which is a standard practice to prevent Dune from scanning 
; dependency files.

(dirs :standard \ node_modules)

(melange.emit
 (alias s-tier)
 (target dist)
 (libraries s_tier)
 (runtime_deps 
   (glob_files_rec ./src/**.mjs)
   (glob_files_rec ./src/**.ts)
   (glob_files_rec ./types/**)
   (glob_files_rec ./src/**.mts))
 ; (promote (until-clean))
 (module_systems
  (es6 mjs)))
